--- a/src/components/molecules/PricingCard.astro
+++ b/src/components/molecules/PricingCard.astro
@@ -23,7 +23,7 @@ const cards = [
             benefits: [
                 "Almacenaje para proyectos ilimitado","Exportaciones en PDF y JPG","Exportaciones por proyecto ilimitadas","Agregar más áreas de trabajo por proyecto"
             ],
-            button:"Contrata Ahora"
+            button:"Registrate Ahora"
         }
 ]
 ---
