Added Poppins and updated fonts

--- a/src/components/atoms/Subtitle.astro
+++ b/src/components/atoms/Subtitle.astro
@@ -3,4 +3,4 @@
 const {subtitle, Color, textAlign, aditionalClass} = Astro.props
 
 ---
-<h2 class=`text-lg md:text-xl lg:text-3xl text-${Color} font-bold text-${textAlign} ${aditionalClass}}`>{subtitle}<slot/></h2>
+<h2 class=`text-lg md:text-xl font-poppins lg:text-3xl text-${Color} font-bold text-${textAlign} ${aditionalClass}}`>{subtitle}<slot/></h2>
