--- a/src/components/molecules/PricingCard.astro
+++ b/src/components/molecules/PricingCard.astro
@@ -5,7 +5,7 @@ import Text from "../atoms/Text.astro";
 
 const cards = [
         {
-            title:"'Basico",
+            title:"Basico",
             price:"Gratis",
             background:"white",
             titleColor:"accent",
