--- a/src/styles.css
+++ b/src/styles.css
@@ -18,3 +18,28 @@
   font-weight: 300; /* Light */
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'Poppins';
+  src: url('../../public/Poppins-Light.ttf') format('truetype');
+  font-weight: 300; /* Light */
+  font-style: light;
+}
+@font-face {
+  font-family: 'Poppins';
+  src: url('../../public/Poppins-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Poppins';
+  src: url('../../public/Poppins-SemiBold.ttf') format('truetype');
+  font-weight: 600; /* Semibold */
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Poppins';
+  src: url('../../public/Poppins-Bold.ttf') format('truetype');
+  font-weight: 700; /* Bold */
+  font-style: bold;
+}
