--- a/src/components/organisms/Hero/Hero.astro
+++ b/src/components/organisms/Hero/Hero.astro
@@ -8,16 +8,16 @@ import Button from "../../atoms/Button.astro";
   <div
     class="text-center flex flex-col gap-4 items-center xl:items-start xl:text-start xl:grid-col-start-0 xl:grid-col-end-1"
   >
-    <p class="hidden md:block text-accent font-bold text-lg">
+    <p class="hidden md:block text-accent font-bold text-lg font-poppins">
       Tus presupuestos, tus reglas
     </p>
     <h1
-      class="text-2xl font-semibold text-lightAccent leading-tight lg:text-4xl"
+      class="text-2xl font-semibold text-lightAccent leading-tight lg:text-4xl font-poppins"
     >
       Cotiza como un profesional con <span class="text-accent font-bold"
         >Stimate</span>
     </h1>
-    <h2 class="text-base lg:text-lg">
+    <h2 class="text-base lg:text-lg font-comfortaa">
       Cotiza fácil y rápido: La guía definitiva para freelancers de
       programación.
     </h2>
