--- a/src/components/molecules/BenefitsCard.astro
+++ b/src/components/molecules/BenefitsCard.astro
@@ -8,7 +8,7 @@ const {icon, title, color, body, id, aditionalClass} = Astro.props;
         <img src={icon} alt="Icon">
     </div>
     <div class="flex w-full items-center justify-center md:justify-start">
-        <Subtitle subtitle={title} Color={color}  />
+        <h2 class="text-xl font-poppins lg:text-3xl text-lightAccent font-bold text-center">{title}</h2>
     </div>
     <div class="flex w-full items-center justify-center">
         <Text text={body} color="baseColor" />
