--- a/src/styles.css
+++ b/src/styles.css
@@ -29,7 +29,7 @@
   font-family: 'Poppins';
   src: url('../../public/Poppins-Regular.ttf') format('truetype');
   font-weight: 400;
-  font-style: normal;
+  font-style: medium;
 }
 @font-face {
   font-family: 'Poppins';
