Updated sidebar font

--- a/src/components/organisms/Navbar/Navbar.astro
+++ b/src/components/organisms/Navbar/Navbar.astro
@@ -28,13 +28,15 @@ import Button from "../../atoms/Button.astro"
         </button>
         
     </div>
+
+    <!-- sidebar -->
     <div  id="sidebar" class="fixed z-10 top-0 left-0 h-full w-64 bg-gray-800 translate-x-[-100%] bg-white text-baseColor block transition-transform duration-300 ease-in-out lg:hidden shadow-2xl">
         <nav class="p-4">
             <div class="flex w-full items-center justify-between pr-4">
                 <img class="size-12" src="Logo.svg" alt="Logo">
                 <img src="/close.webp" id="close" class="size-8"/>
             </div>
-            <ul class="pt-5 flex w-full flex-col gap-10 justify-center items-center text-center">
+            <ul class="pt-5 flex w-full flex-col gap-10 justify-center items-center text-center font-comfortaa">
                 <li class="w-full rounded-xl text-lg hover:text-lightAccent hover:bg-accentBackground"><a href="#" >Inicio</a></li>
                 <li class="w-full rounded-xl text-lg hover:text-lightAccent hover:bg-accentBackground"><a href="#benefits" >Beneficios</a></li>
                 <li class="w-full rounded-xl text-lg hover:text-lightAccent hover:bg-accentBackground"><a href="#pricing">Planes</a></li>
