Updated pricing cards

--- a/src/components/atoms/Text.astro
+++ b/src/components/atoms/Text.astro
@@ -1,6 +1,6 @@
 ---
 
-const {text, Color, adicionalClass} = Astro.props
+const {text, Color, additionalClass} = Astro.props
 
 ---
-<span class=`text-base  text-${Color} leading-6 font-comfortaa ${adicionalClass}`>{text}<slot/></span>
+<span class=`text-base text-${Color} leading-6 font-comfortaa ${additionalClass}`>{text}<slot/></span>
