--- a/src/components/molecules/PricingCard.astro
+++ b/src/components/molecules/PricingCard.astro
@@ -35,6 +35,7 @@ const cards = [
                 Color={card.titleColor}
             />
             <Text 
+            additionalClass="font-bold"
             text={card.price}
             Color={card.titleColor}
             />
