--- a/src/components/organisms/Hero/Hero.astro
+++ b/src/components/organisms/Hero/Hero.astro
@@ -9,10 +9,10 @@ import Button from "../../atoms/Button.astro";
     class="text-center flex flex-col gap-4 items-center xl:items-start xl:text-start xl:grid-col-start-0 xl:grid-col-end-1"
   >
     <p class="hidden md:block text-accent font-bold text-lg font-poppins">
-      Tus presupuestos, tus reglas
+      Tu presupuesto, tus reglas
     </p>
     <h1
-      class="text-2xl font-semibold text-lightAccent leading-tight lg:text-4xl font-poppins"
+      class="text-2xl font-medium text-lightAccent leading-tight lg:text-4xl font-poppins "
     >
       Cotiza como un profesional con <span class="text-accent font-bold"
         >Stimate</span>
