--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,6 +14,7 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/Logo.svg" />
 		<meta name="generator" content={Astro.generator} />
+		<link rel="stylesheet" href="./styles.css" />
 		<title>{title}</title>
 	</head>
 	<body class="w-full h-full bg-black/20">
