Updated navbar and buttons for the links

--- a/src/components/molecules/PricingCard.astro
+++ b/src/components/molecules/PricingCard.astro
@@ -54,7 +54,7 @@ const cards = [
         </div>
         <div class="flex justify-center align-center py-10 ">
             <Button 
-            link="##"
+            link="https://app.stimate.co/planes"
             text={card.button}
             />
         </div>
