--- a/src/components/molecules/PricingCard.astro
+++ b/src/components/molecules/PricingCard.astro
@@ -10,7 +10,7 @@ const cards = [
             background:"white",
             titleColor:"accent",
             benefits: [
-                "Almacenaje para 5 proyectos", "Exportación solo en JPEG", "Define hasta 4 áreas por proyecto","Solo 2 exportaciones por proyecto"
+                "Almacenaje para 5 proyectos", "Define hasta 4 áreas por proyecto", "Exportacion en Imagen"
             ],
             "button":"¡Registrate ahora!"
         }
@@ -21,7 +21,7 @@ const cards = [
             background:"accent",
             titleColor:"white",
             benefits: [
-                "Almacenaje para proyectos ilimitado","Exportaciones en PDF y JPG","Exportaciones por proyecto ilimitadas","Agregar más áreas de trabajo por proyecto"
+                "Almacenaje para proyectos ilimitado","Agregar areas de trabajo ilimitado","Exportaciones en PDF"
             ],
             button:"Registrate Ahora"
         }
