Updated pricing card to have Imagen Y PDF

--- a/src/components/molecules/PricingCard.astro
+++ b/src/components/molecules/PricingCard.astro
@@ -21,7 +21,7 @@ const cards = [
             background:"accent",
             titleColor:"white",
             benefits: [
-                "Almacenaje para proyectos ilimitado","Agregar areas de trabajo ilimitado","Exportaciones en PDF"
+                "Almacenaje para proyectos ilimitado","Agregar areas de trabajo ilimitado","Exportaciones en Imagen y PDF"
             ],
             button:"Registrate Ahora"
         }
