--- a/src/components/molecules/PricingCard.astro
+++ b/src/components/molecules/PricingCard.astro
@@ -17,7 +17,7 @@ const cards = [
         ,
         {
             title:"Premium",
-            price:"$10 usd",
+            price:"$20 MXN /Mensual",
             background:"accent",
             titleColor:"white",
             benefits: [
